Color to the answers

--- a/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
@@ -28,27 +28,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) What percent of patients in the treatment group were pain free 24 hours after receiving acupunture? What percent in the control group?\n",
-    "\n",
-    "[Answer]"
+    "(a) What percent of patients in the treatment group were pain free 24 hours after receiving acupunture? What percent in the control group?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) At first glance, does acupuncture appear to be an effective treatment for migraines? Explain your reasoning.\n",
-    "\n",
-    "[Answer]\n"
+    "(b) At first glance, does acupuncture appear to be an effective treatment for migraines? Explain your reasoning.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) Do the data provide convincing evidence that there is a real pain reduction for those patients in the treatment group? Or do you think that the observed difference might just be due to chance?\n",
-    "\n",
-    "[Answer]"
+    "(c) Do the data provide convincing evidence that there is a real pain reduction for those patients in the treatment group? Or do you think that the observed difference might just be due to chance?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -63,27 +66,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) the cases\n",
-    "\n",
-    "[Answer]"
+    "(a) the cases  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) the variables and their types\n",
-    "\n",
-    "[Answer]"
+    "(b) the variables and their types  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) the main research question\n",
-    "\n",
-    "[Answer]"
+    "(c) the main research question  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -98,18 +104,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) Identify the population of interest and the sample in this study.\n",
-    "\n",
-    "[Answer]"
+    "(a) Identify the population of interest and the sample in this study.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Comment on whether or not the results of the study can be generalized to the population, and if the findings of the study can be used to establish causal relationships.\n",
-    "\n",
-    "[Answer]"
+    "(b) Comment on whether or not the results of the study can be generalized to the population, and if the findings of the study can be used to establish causal relationships.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -124,36 +132,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) An American in the sample.\n",
-    "\n",
-    "[Answer]"
+    "(a) An American in the sample.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Number of hours spent relaxing after an average work day.\n",
-    "\n",
-    "[Answer]"
+    "(b) Number of hours spent relaxing after an average work day.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) 1.65.\n",
-    "\n",
-    "[Answer]"
+    "(c) 1.65.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(d) Average number of hours all Americans spend relaxing after an average work day.\n",
-    "\n",
-    "[Answer]"
+    "(d) Average number of hours all Americans spend relaxing after an average work day.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -168,18 +180,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) What type of study is this?\n",
-    "\n",
-    "[Answer]"
+    "(a) What type of study is this?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Suggest a sampling strategy for carrying out this study.\n",
-    "\n",
-    "[Answer]"
+    "(b) Suggest a sampling strategy for carrying out this study.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -196,27 +210,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) Describe the relationship between life expectancy and percentage of internet users.\n",
-    "\n",
-    "[Answer]"
+    "(a) Describe the relationship between life expectancy and percentage of internet users.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) What type of study is this?\n",
-    "\n",
-    "[Answer]"
+    "(b) What type of study is this?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) State a possible confounding variable that might explain this relationship and describe its potential effect.\n",
-    "\n",
-    "[Answer]"
+    "(c) State a possible confounding variable that might explain this relationship and describe its potential effect.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -231,27 +248,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) Students at an elementary school are given a questionnaire that they are asked to return after their parents have completed it. One of the questions asked is, \"Do you find that your work schedule makes it difficult for you to spend time with your kids after school?\" Of the parents who replied, 85% said \"no\". Based on these results, the school officials conclude that a great majority of the parents have no difficulty spending time with their kids after school.\n",
-    "\n",
-    "[Answer]"
+    "(a) Students at an elementary school are given a questionnaire that they are asked to return after their parents have completed it. One of the questions asked is, \"Do you find that your work schedule makes it difficult for you to spend time with your kids after school?\" Of the parents who replied, 85% said \"no\". Based on these results, the school officials conclude that a great majority of the parents have no difficulty spending time with their kids after school.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) A survey is conducted on a simple random sample of 1,000 women who recently gave birth, asking them about whether or not they smoked during pregnancy. A follow-up survey asking if the children have respiratory problems is conducted 3 years later, however, only 567 of these women are reached at the same address. The researcher reports that these 567 women are representative of all mothers.\n",
-    "\n",
-    "[Answer]"
+    "(b) A survey is conducted on a simple random sample of 1,000 women who recently gave birth, asking them about whether or not they smoked during pregnancy. A follow-up survey asking if the children have respiratory problems is conducted 3 years later, however, only 567 of these women are reached at the same address. The researcher reports that these 567 women are representative of all mothers.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) An orthopedist administers a questionnaire to 30 of his patients who do not have any joint problems and finds that 20 of them regularly go running. He concludes that running decreases the risk of joint problems.\n",
-    "\n",
-    "[Answer]"
+    "(c) An orthopedist administers a questionnaire to 30 of his patients who do not have any joint problems and finds that 20 of them regularly go running. He concludes that running decreases the risk of joint problems.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -266,36 +286,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) He randomly samples 40 students from the study's population, gives them the survey, asks them to fill it out and bring it back the next day.\n",
-    "\n",
-    "[Answer]"
+    "(a) He randomly samples 40 students from the study's population, gives them the survey, asks them to fill it out and bring it back the next day.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) He gives out the survey only to his friends, making sure each one of them fills out the survey.\n",
-    "\n",
-    "[Answer]"
+    "(b) He gives out the survey only to his friends, making sure each one of them fills out the survey.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) He posts a link to an online survey on Facebook and asks his friends to fill out the survey.\n",
-    "\n",
-    "[Answer]"
+    "(c) He posts a link to an online survey on Facebook and asks his friends to fill out the survey.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(d) He randomly samples 5 classes and asks a random sample of students from those classes to fill out the survey.\n",
-    "\n",
-    "[Answer]"
+    "(d) He randomly samples 5 classes and asks a random sample of students from those classes to fill out the survey.  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
@@ -310,27 +334,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) What is the response variable?\n",
-    "\n",
-    "[Answer]"
+    "(a) What is the response variable?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) What is the explanatory variable? What are its levels?\n",
-    "\n",
-    "[Answer]"
+    "(b) What is the explanatory variable? What are its levels?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) What is the blocking variable? What are its levels?\n",
-    "\n",
-    "[Answer]"
+    "(c) What is the blocking variable? What are its levels?  \n",
+    "<span style=\"color:navy\">\n",
+    "   [Answer]\n",
+    "</span>  "
    ]
   },
   {
