Added explanation about the answers

--- a/Coursera/Duke University/Probability-intro/Week 2/Quiz.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/Quiz.ipynb
@@ -15,7 +15,12 @@
     "&#9744; 0, 1, 3, 3, 3, 5, 6  \n",
     "&#9744; 0, 1, 2, 3, 4, 5, 6  \n",
     "&#9744; 0, 25, 50, 100, 125, 150, 1000  \n",
-    "&#9745; 100, 100, 100, 100, 100, 100, 101  "
+    "&#9745; 100, 100, 100, 100, 100, 100, 101  \n",
+    "\n",
+    "*Note that there are three commonly used measures of center and spread:  \n",
+    "center: mean (the arithmetic average), median (the midpoint), mode (the most frequent observation)  \n",
+    "spread: standard deviation (variability around the mean), range (max-min), interquartile range (middle 50% of the distribution)  \n",
+    "The dataset with the most repeated observations has the least variability, hence the lowest standard deviation.*"
    ]
   },
   {
@@ -133,7 +138,9 @@
    "source": [
     "2) True or False: The statistic mean/median (mean divided by median) can be used as a measure of skewness (either right or left). Suppose we are dealing with a distribution where the minimum is 0.5. If this statistic (mean/median) is less than 1, the distribution is most likely left skewed.  \n",
     "&#9745; True  \n",
-    "&#9744; False  "
+    "&#9744; False  \n",
+    "\n",
+    "*In a left skewed distribution the median tends to be greater than the mean, therefore we would expect mean/median to be less than 1.*"
    ]
   },
   {
@@ -142,7 +149,9 @@
    "source": [
     "3) True or False: You are going to collect income data from a right-skewed distribution of incomes of politicians. If you take a large enough sample from that distribution, the sample mean and the sample median will always have the same value.  \n",
     "&#9744; True  \n",
-    "&#9745; False  "
+    "&#9745; False \n",
+    "\n",
+    "*Think about the unrealistic case where instead of collecting a sample of income data from politicians you instead collect income data from all politicians. In that case, your sample mean and sample median will be close to or equal to the population’s values, which are not equal to each other in a skewed distribution.*"
    ]
   },
   {
@@ -151,7 +160,9 @@
    "source": [
     "4) True or False: A mosaic plot is useful for visualizing the relationship between a numerical and a categorical variable.  \n",
     "&#9744; True  \n",
-    "&#9745; False  "
+    "&#9745; False  \n",
+    "\n",
+    "*Use contingency tables and segmented bar plots or mosaic plots to assess the relationship between two categorical variables.*"
    ]
   },
   {
@@ -161,7 +172,10 @@
     "5) Does meditation cure insomnia? Researchers randomly divided 400 people into two equal-sized groups. One group meditated daily for 30 minutes, the other group attended a 2-hour information session on insomnia. At the beginning of the study, the average difference between the number of minutes slept between the two groups was about 0. After the study, the average difference was about 32 minutes, and the meditation group had a higher average number of minutes slept. To test whether an average difference of 32 minutes could be attributed to chance, a statistics student decided to conduct a randomization test. She wrote the number of minutes slept by each subject in the study on an index card. She shuffled the cards together very well, and then dealt them into two equal-sized groups. Which of the following best describes the outcome?  \n",
     "&#9744; The average difference between the two stacks of cards will be about 32 minutes.  \n",
     "&#9745; The average difference between the two stacks of cards will be about 0 minutes.  \n",
-    "&#9744; If meditation is effective, the average difference between the two stacks of cards will be more than 32 minutes.  "
+    "&#9744; If meditation is effective, the average difference between the two stacks of cards will be more than 32 minutes.  \n",
+    "\n",
+    "*Note that an observed difference in sample statistics suggesting dependence between variables may be due to random chance, and that we need to use hypothesis testing to determine if this difference is too large to be attributed to random chance. Set up null and alternative hypotheses for testing for independence between variables, and evaluate the data support for these hypotheses using a simulation technique.  \n",
+    "Since we're randomly splitting the cards into two groups, we would expect similar averages in the two groups, yielding a difference of 0 in the averages.*"
    ]
   }
  ],
