Added content of Week 2

--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -105,6 +105,13 @@
     "median: 27, 54, 69, 75, [87], [88], 88, 93, 95, 100 = \\frac{87+88}{2} = 87.5\n",
     "$\n",
     "\n",
+    "**Recap**\n",
+    "\n",
+    "So to recap, in the left skewed distribution, the mean is generally smaller than the median. Since the few low valued observations pull the average down, in symmetric distributions the mean and the median are now roughly equal to each other. And in right skewed distributions, the mean is generally higher than the median since the few high valued observations pulled the average up.\n",
+    "\n",
+    "<img src=\"images/skew_mean.png\" width=\"700\" align=\"center\"/>\n",
+    "\n",
+    "\n",
     "### Questions\n",
     "\n",
     "1) Which of the following is true? (Hint: Sketching the distributions might be useful.)  \n",
