--- a/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**1.3 Air pollution and birth outcomes, study components.** Researchers collected data to examine the relationship between air pollutants and preterm births in Southern California. During the study air pollution levels were measured by air quality monitoring stations. Specifically, levels of carbon monoxide were recorded in parts per million, nitrogen dioxide and ozone in parts per hundred million, and coarse particulate matter (PM$_{10}$ ) in $μg/m^3$ . Length of gestation data were collected on 143,196 births between the years 1989 and 1993, and air pollution exposure during gestation was calculated for each birth. The analysis suggested that increased ambient PM$_10$ and, to a lesser degree, CO concentrations may be associated with the occurrence of preterm births. In this study, identify:"
+    "**1.3 Air pollution and birth outcomes, study components.** Researchers collected data to examine the relationship between air pollutants and preterm births in Southern California. During the study air pollution levels were measured by air quality monitoring stations. Specifically, levels of carbon monoxide were recorded in parts per million, nitrogen dioxide and ozone in parts per hundred million, and coarse particulate matter (PM$_{10}$ ) in $\\mu g/m^{3}$ . Length of gestation data were collected on 143,196 births between the years 1989 and 1993, and air pollution exposure during gestation was calculated for each birth. The analysis suggested that increased ambient PM$_{10}$ and, to a lesser degree, CO concentrations may be associated with the occurrence of preterm births. In this study, identify:"
    ]
   },
   {
