--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining probability.ipynb
@@ -21,6 +21,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When discussing probabilities of events, we will generally use the notation ```P(A)``` to indicate the probability of event A."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When discussing probabilities of events, we will generally use the notation `P(A)` to indicate the probability of event A."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When discussing probabilities of events, we will generally use the notation P(A) to indicate the probability of event A."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
