--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -144,8 +144,7 @@
     "\n",
     "Therefore, the probability of drawing a Jack or a 3 is simply the sum of the individual probability of drawing a Jack or drawing a 3. Each probability is 4 over 52 resulting in a total probability of approximately of 0.154. So let's just round that and say about 15% chance. \n",
     "\n",
-    "$\n",
-    "P(3\\ or\\ Jack) = P(3) + P(Jack) \\\\\n",
+    "$P(3\\ or\\ Jack) = P(3) + P(Jack) \\\\\n",
     "P(3\\ or\\ Jack) = \\frac{4}{52} + \\frac{4}{52} \\\\\n",
     "P(3\\ or\\ Jack) = 0.0769 + 0.0769 \\\\\n",
     "P(3\\ or\\ Jack) = 0.1538 \\approx 15\\% \\\\\n",
@@ -165,12 +164,10 @@
     "\n",
     "Hence, the probability of drawing a Jack or a red card is composed by the sum of the individual probability of drawing a Jack or drawing a red card, minus the joint probability in other words, the overlap between Jacks and reds. Each probability is 4 over 52 resulting in a total probability of approximately of 0.154. So let's just round that and say about 15% chance. \n",
     "\n",
-    "$\n",
-    "P(Jack\\ or\\ Red) = P(Jack) + P(Red) - P(Jack\\ and\\ Red) \\\\\n",
-    "P(Jack\\ or\\ Red) = \\frac{4}{52} + \\frac{26}{52} - \\frac{2}{52} \\\\\n",
-    "P(Jack\\ or\\ Red) = 0.0769 + 0.5 - 0.0384 \\\\\n",
-    "P(Jack\\ or\\ Red) = 0.5385 \\approx 54\\% \\\\\n",
-    "$\n",
+    "$P(Jack\\ or\\ Red) = P(Jack) + P(Red) - P(Jack\\ and\\ Red)$  \n",
+    "$P(Jack\\ or\\ Red) = \\frac{4}{52} + \\frac{26}{52} - \\frac{2}{52}$  \n",
+    "$P(Jack\\ or\\ Red) = 0.0769 + 0.5 - 0.0384$  \n",
+    "$P(Jack\\ or\\ Red) = 0.5385 \\approx 54\\%$  \n",
     "\n",
     "To generalize, for non-disjoint events A and B, the probability of A or B `P(A or B)` is the probability of A `P(A)` plus the probability of B `P(B)` minus the probability of A and B `P(A and B)` happening at the same time that we take away once to avoid double counting. \n",
     "\n",
