Added content week 3

--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -144,11 +144,10 @@
     "\n",
     "Therefore, the probability of drawing a Jack or a 3 is simply the sum of the individual probability of drawing a Jack or drawing a 3. Each probability is 4 over 52 resulting in a total probability of approximately of 0.154. So let's just round that and say about 15% chance. \n",
     "\n",
-    "$P(3\\ or\\ Jack) = P(3) + P(Jack) \\\\\n",
-    "P(3\\ or\\ Jack) = \\frac{4}{52} + \\frac{4}{52} \\\\\n",
-    "P(3\\ or\\ Jack) = 0.0769 + 0.0769 \\\\\n",
-    "P(3\\ or\\ Jack) = 0.1538 \\approx 15\\% \\\\\n",
-    "$\n",
+    "$P(3\\ or\\ Jack) = P(3) + P(Jack)$<br>\n",
+    "$P(3\\ or\\ Jack) = \\frac{4}{52} + \\frac{4}{52}$<br>\n",
+    "$P(3\\ or\\ Jack) = 0.0769 + 0.0769$<br>\n",
+    "$P(3\\ or\\ Jack) = 0.1538 \\approx 15\\%$  \n",
     "\n",
     "To generalize, for disjoint events A and B, the probability of A or B happening `P(A or B)` is simply the probability of A `P(A)` plus the probability of B `P(B)`.  \n",
     "\n",
