Added content week 3

--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -147,7 +147,7 @@
     "$P(3\\ or\\ Jack) = P(3) + P(Jack)$<br>\n",
     "$P(3\\ or\\ Jack) = \\frac{4}{52} + \\frac{4}{52}$<br>\n",
     "$P(3\\ or\\ Jack) = 0.0769 + 0.0769$<br>\n",
-    "$P(3\\ or\\ Jack) = 0.1538 \\approx 15\\%$  \n",
+    "$P(3\\ or\\ Jack) = 0.1538 \\approx 15\\%$<br>\n",
     "\n",
     "To generalize, for disjoint events A and B, the probability of A or B happening `P(A or B)` is simply the probability of A `P(A)` plus the probability of B `P(B)`.  \n",
     "\n",
@@ -163,10 +163,10 @@
     "\n",
     "Hence, the probability of drawing a Jack or a red card is composed by the sum of the individual probability of drawing a Jack or drawing a red card, minus the joint probability in other words, the overlap between Jacks and reds. Each probability is 4 over 52 resulting in a total probability of approximately of 0.154. So let's just round that and say about 15% chance. \n",
     "\n",
-    "$P(Jack\\ or\\ Red) = P(Jack) + P(Red) - P(Jack\\ and\\ Red)$  \n",
-    "$P(Jack\\ or\\ Red) = \\frac{4}{52} + \\frac{26}{52} - \\frac{2}{52}$  \n",
-    "$P(Jack\\ or\\ Red) = 0.0769 + 0.5 - 0.0384$  \n",
-    "$P(Jack\\ or\\ Red) = 0.5385 \\approx 54\\%$  \n",
+    "$P(Jack\\ or\\ Red) = P(Jack) + P(Red) - P(Jack\\ and\\ Red)$<br>\n",
+    "$P(Jack\\ or\\ Red) = \\frac{4}{52} + \\frac{26}{52} - \\frac{2}{52}$<br>\n",
+    "$P(Jack\\ or\\ Red) = 0.0769 + 0.5 - 0.0384$<br>\n",
+    "$P(Jack\\ or\\ Red) = 0.5385 \\approx 54\\%$<br>\n",
     "\n",
     "To generalize, for non-disjoint events A and B, the probability of A or B `P(A or B)` is the probability of A `P(A)` plus the probability of B `P(B)` minus the probability of A and B `P(A and B)` happening at the same time that we take away once to avoid double counting. \n",
     "\n",
@@ -240,12 +240,11 @@
     "\n",
     "**Solution:**\n",
     "\n",
-    "$\n",
-    "P(Legalize=Yes\\ or\\ View=Yes) = P(Legalize=Yes) + P(View=Yes) - P(Legalize=Yes\\ and\\ View=Yes) \\\\\n",
-    "P(Legalize=Yes\\ or\\ View=Yes) = \\frac{114}{165} + \\frac{118}{165} - \\frac{78}{165} \\\\\n",
-    "P(Legalize=Yes\\ or\\ View=Yes) = \\frac{114 + 118 - 78}{165} \\\\\n",
-    "P(Legalize=Yes\\ or\\ View=Yes) = 0,9333 \\approx 93\\%\n",
-    "$\n",
+    "$P(Legalize=Yes\\ or\\ View=Yes) = P(Legalize=Yes) + P(View=Yes) - P(Legalize=Yes\\ and\\ View=Yes)$<br>\n",
+    "$P(Legalize=Yes\\ or\\ View=Yes) = \\frac{114}{165} + \\frac{118}{165} - \\frac{78}{165}$<br>\n",
+    "$P(Legalize=Yes\\ or\\ View=Yes) = \\frac{114 + 118 - 78}{165}$<br>\n",
+    "$P(Legalize=Yes\\ or\\ View=Yes) = 0,9333 \\approx 93\\%$<br>\n",
+    "\n",
     "\n",
     "<br>\n",
     "\n",
