--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -128,13 +128,13 @@
     "\n",
     "In Venn diagram representation, where we represent each event by these circles, if events A and B are disjoint we end up with two circles that don't touch each other, which indicates that the probability of event A and B happening at the same time. So P(A and B) = 0.\n",
     "\n",
-    "<img src=\"images/venn_disjoint.png\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"images/venn_disjoint.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Non-disjoint events** \n",
     " \n",
     "Non-disjoint events on the other hand can happen at the same time. For example, a student can get an A in Statistics and Economy at the same time. A Venn diagram representation of events A and B that are non disjoint we have two circles that over lap, in other words join, which indicates that the probability of event A and B happening at the same time is a value between 0 and 1. \n",
     "\n",
-    "<img src=\"images/venn_nondisjoint.png\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"images/venn_nondisjoint.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Union of Disjoint Probabilities:**  \n",
     "\n",
@@ -182,13 +182,13 @@
     "\n",
     "A sample space is a collection of all possible outcomes of a trial. For example, considering that the sex can be only male of female and a couple has two kids. It's possible that both kids are male. It's possible that both are female. It's possible that the first one is female and the second one is male or the last possibility is that the first one is male and second one is female. So if we write out all these possibilities what we have is the sample space for the two kids of this couple. \n",
     "\n",
-    "<img src=\"images/male_female.png\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"images/male_female.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Probability Distribution**\n",
     "\n",
     "A probability distribution lists all possible outcomes and the probabilities with which they occur. Let's say you toss a fair coin once, the possible outcomes are a head or a tail. Each of which has a 50% chance of happening. Alternatively, let's say you toss the coin twice. The possible outcomes are both heads, both tails, the first toss is a head and the second toss is a tail or the first toss is a tail and the second toss is a head. Since each outcome is equally likely, we have about a 25% chance of each one of them happening. \n",
     "\n",
-    "<img src=\"images/probability_distribution.png\" width=\"400\" align=\"center\"/>\n",
+    "<img src=\"images/probability_distribution.svg\" width=\"400\" align=\"center\"/>\n",
     "\n",
     "**Rules:**\n",
     "\n",
@@ -261,17 +261,130 @@
    "source": [
     "---\n",
     "## Independence\n",
+    "\n",
+    "Two processes are said to be independent if **knowing the outcome of one provides no useful information about the outcome of the other**. For example, knowing that the coin landed on a head on the first toss does not provide any useful information for determining what the coin will land on in the second toss. The probability of a head or a tail on the second toss is equally 0.5, regardless of the outcome of the first toss. Therefore, **outcomes of two coin tosses are independent**. \n",
+    "\n",
+    "<img src=\"images/independence.svg\" width=\"800\" align=\"center\"/>\n",
+    "\n",
+    "On the other hand, knowing that the first card drawn from a deck is an `A` **does provide** useful information for calculating the probabilities of outcomes in the second draw.For example probability of drawing yet another `A` is going to be $\\frac{3}{51}$. We have 51 cards left in the deck, and only 3 of them are `A`. While the probability of drawing a `Jack` is going to be $\\frac{4}{51}$, since there still have 4 `Jacks` left in the deck. Therefore, **outcomes of two draws from a deck of cards, without replacement are dependent**. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Checking for independence**\n",
+    "\n",
+    "If the probability of an event `A` occurring, given that event `B` occurred `P(A|B)` is the same as the probability of event `A` occurring in the first place `P(A)`, then events `A` and `B` are independent. This rule basically says that knowing `B` tells us nothing about `A`.\n",
+    "\n",
+    "$$\n",
+    "P(A|B) = P(A)\\ \\ \\ \\ \\rightarrow \\ \\ \\ A\\ \\text{and}\\ B\\ \\text{are independent.}\n",
+    "$$\n",
+    "\n",
+    "**Practicing:**\n",
+    "\n",
+    "In 2013, SurveyUSA interviewed a random sample of 500 North Carolina residents, asking them whether they think widespread gun ownership protects law abiding citizens from crime, or make society more dangerous. \n",
+    "- 58% of all respondents said it protects citizens. \n",
+    "- 67% of white respondents,\n",
+    "- 28% of black respondents, \n",
+    "- and 64% of Hispanic respondents shared this view.  \n",
+    "\n",
+    "Opinion on gun ownership and race ethnicity are most likely ...?  \n",
+    "&#9744; Complementary  \n",
+    "&#9744; Mutually exclusive  \n",
+    "&#9744; Independent  \n",
+    "&#9745; Dependent  \n",
+    "&#9744; Disjoint  \n",
+    "\n",
+    "$P(\\text{protect citizens}) = 0.58$<br/>\n",
+    "$P(\\text{protect citizens}\\ |\\ \\text{white}) = 0.67$<br/>\n",
+    "$P(\\text{protect citizens}\\ |\\ \\text{black}) = 0.28$<br/>\n",
+    "$P(\\text{protect citizens}\\ |\\ \\text{hispanic}) = 0.64$<br/>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Determining Dependence Based on Sample Data\n",
+    "\n",
+    "<img src=\"images/observed_difference.svg\" width=\"600\" align=\"center\"/>\n",
+    "\n",
+    "If we observe a difference between the conditional probabilities that we calculate based on the sample, we say that these data suggest dependence. The next natural step would then be to actual conduct a hypothesis test. To see if what we observe these difference that we observed, could have just happened due to chance or natural random sampling. Or, if there's actually a real difference in the population. We can actually do a little bit of speculating based on the magnitude of the differences that we observe as well as the sample size. For example, the probability that guns protect citizens, given that somebody's white versus, given that they're black versus given that they're Hispanic, **if these conditional probabilities varied greatly, then there is stronger evidence that the difference is real**. On the other hand, **if the sample size is large, even small differences is in conditional probabilities might provide strong evidence of a real difference**. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Product Rule for Independent Events**\n",
+    "\n",
+    "$$\n",
+    "\\text{If}\\ A\\ \\text{and}\\ B\\ \\text{are independent,}\\ P(A\\ \\text{and}\\ B) = P(A) \\times P(B)\n",
+    "$$\n",
+    "\n",
+    "For example, you toss a coin twice, then *What is the probability of getting two tails in a row?* Sounds pretty simple eh? The probability of two tails in a row is simply going to be the probability of a tail on the first toss times the probability of a tail on the second toss. Probability of tail on either toss is simply 0.5 or $\\frac{1}{2}$. So the overall probability is going to be a quarter or about 25%. \n",
+    "\n",
+    "$P(\\text{2 tails in a row}) = P(\\text{tail}) \\times P(\\text{tail})$<br>\n",
+    "$P(\\text{2 tails in a row}) = \\frac{1}{2} \\times \\frac{1}{2}$<br>\n",
+    "$P(\\text{2 tails in a row}) = 0.25 = 25\\%$<br>\n",
+    "\n",
+    "A quick note, this rule isn't really limited to just two events. And it can actually be expanded to as many independent events as you need. So if, instead of doing two coin tosses, we had a hundred of them. We could simply multiply a hundred of the same probabilities together. Generically said, if `A1`, `A2` all the way through `Ak` are independent, then probability of all of these events happening at once is simply going to be the product of the individual probabilities of the events. \n",
+    "\n",
+    "$$\n",
+    "P(A_1\\ \\text{and}\\ A_2\\ \\text{and}\\ A_k) = P(A_1) \\times P(A_2) \\times\\ ...\\ \\times P(A_k)\n",
+    "$$\n",
+    "\n",
+    "**Practicing:**  \n",
+    "\n",
+    "A 2012 Gallup poll suggests that West Virginia has the highest obesity rate among US states, with 33.5% of West Virginians being obese. Assuming that the obesity rates stay constant, what is the probability that two randomly selected West Virginians are both obese? \n",
+    "\n",
+    "*\"two individuals are randomly selected\" &#8680; they are independent of each other*  \n",
+    "\n",
+    "$P(\\text{obesity}) = 0.335$<br>\n",
+    "$P(\\text{both obese}) = P(\\text{obesity}) \\times P(\\text{obesity})$<br>\n",
+    "$P(\\text{both obese}) = 0.335 \\times 0.335$<br>\n",
+    "$P(\\text{both obese}) \\approx 0.11 \\approx 11\\%$<br>\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1) According to a 2013 Pew Research Poll that surveyed 1,504 Americans, 67% of respondents said that they believe the Earth is warming. Roughly 50% of Republicans, 88% of Democrats, and 62% of Independents share this opinion. Based on these data, opinion on global warming and political leaning are most likely:  \n",
+    "&#9744; complementary  \n",
+    "&#9744; independent  \n",
+    "&#9744; mutually exclusive  \n",
+    "&#9745; dependent  \n",
+    "&#9744; disjoint  \n",
+    "\n",
+    "*Explaning:* The probability that someone believes the Earth is warming varies by their political affiliation, hence political affiliation and believing that the Earth is warming appear to be dependent. If they were independent, the conditional probabilities of believing that the Earth is warming would be the same given each political affiliation.\n",
+    "\n",
+    "$P(\\text{global warming}) = 0.67$<br/>\n",
+    "$P(\\text{global warming}\\ |\\ \\text{Republican}) = 0.5$<br/>\n",
+    "$P(\\text{global warming}\\ |\\ \\text{Democrats}) = 0.88$<br/>\n",
+    "$P(\\text{global warming}\\ |\\ \\text{Independent}) = 0.62$<br/>\n",
+    "\n",
+    "2) Earlier we saw that `P(protects citizens | White) = 0.67` and `P(protects citizens | Hispanic) = 0.64`. Under which sample size would you be more convinced of a real difference between the proportions of Whites and Hispanics who think the widespread gun ownership protects citizens?  \n",
+    "&#9744; n = 500  \n",
+    "&#9745; n = 50,000  \n",
+    "\n",
+    "3) In a multiple-choice exam, there are 5 questions and 4 choices for each question (a, b, c, d). You have not studied at all and decide to randomly guess the answers. What is the probability that you get all 5 questions correct?  \n",
+    "&#9745; $0.25^5 \\approx 0.00098$  \n",
+    "&#9744; $0.2^4 = 0.0016$  \n",
+    "&#9744; $0.5^5 = 0.03125$  \n",
+    "&#9744; $0.25\\times 5 = 1.25$  \n",
+    "&#9744; $\\frac{4}{5} = 0.8$  \n",
+    "\n",
+    "$P(\\text{correct}) = \\frac{1}{4} = 0.25$<br>\n",
+    "$P(\\text{5 correct}) = P(\\text{correct}_1) \\times P(\\text{correct}_2) \\times\\ ...\\ \\times P(\\text{correct}_5)$<br>\n",
+    "$P(\\text{5 correct}) = P(\\text{correct})^5$<br>\n",
+    "$P(\\text{5 correct}) = 0.25^5 \\approx 0.00098$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Examples"
+   ]
   }
  ],
  "metadata": {
