added svg images

--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -128,13 +128,13 @@
     "\n",
     "In Venn diagram representation, where we represent each event by these circles, if events A and B are disjoint we end up with two circles that don't touch each other, which indicates that the probability of event A and B happening at the same time. So P(A and B) = 0.\n",
     "\n",
-    "<img src=\"images/venn_disjoint.svg\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/venn_disjoint.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Non-disjoint events** \n",
     " \n",
     "Non-disjoint events on the other hand can happen at the same time. For example, a student can get an A in Statistics and Economy at the same time. A Venn diagram representation of events A and B that are non disjoint we have two circles that over lap, in other words join, which indicates that the probability of event A and B happening at the same time is a value between 0 and 1. \n",
     "\n",
-    "<img src=\"images/venn_nondisjoint.svg\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/venn_nondisjoint.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Union of Disjoint Probabilities:**  \n",
     "\n",
@@ -182,13 +182,13 @@
     "\n",
     "A sample space is a collection of all possible outcomes of a trial. For example, considering that the sex can be only male of female and a couple has two kids. It's possible that both kids are male. It's possible that both are female. It's possible that the first one is female and the second one is male or the last possibility is that the first one is male and second one is female. So if we write out all these possibilities what we have is the sample space for the two kids of this couple. \n",
     "\n",
-    "<img src=\"images/male_female.svg\" width=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/male_female.svg\" width=\"300\" align=\"center\"/>\n",
     "\n",
     "**Probability Distribution**\n",
     "\n",
     "A probability distribution lists all possible outcomes and the probabilities with which they occur. Let's say you toss a fair coin once, the possible outcomes are a head or a tail. Each of which has a 50% chance of happening. Alternatively, let's say you toss the coin twice. The possible outcomes are both heads, both tails, the first toss is a head and the second toss is a tail or the first toss is a tail and the second toss is a head. Since each outcome is equally likely, we have about a 25% chance of each one of them happening. \n",
     "\n",
-    "<img src=\"images/probability_distribution.svg\" width=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/probability_distribution.svg\" width=\"400\" align=\"center\"/>\n",
     "\n",
     "**Rules:**\n",
     "\n",
@@ -264,7 +264,7 @@
     "\n",
     "Two processes are said to be independent if **knowing the outcome of one provides no useful information about the outcome of the other**. For example, knowing that the coin landed on a head on the first toss does not provide any useful information for determining what the coin will land on in the second toss. The probability of a head or a tail on the second toss is equally 0.5, regardless of the outcome of the first toss. Therefore, **outcomes of two coin tosses are independent**. \n",
     "\n",
-    "<img src=\"images/independence.svg\" width=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/independence.svg\" width=\"800\" align=\"center\"/>\n",
     "\n",
     "On the other hand, knowing that the first card drawn from a deck is an `A` **does provide** useful information for calculating the probabilities of outcomes in the second draw.For example probability of drawing yet another `A` is going to be $\\frac{3}{51}$. We have 51 cards left in the deck, and only 3 of them are `A`. While the probability of drawing a `Jack` is going to be $\\frac{4}{51}$, since there still have 4 `Jacks` left in the deck. Therefore, **outcomes of two draws from a deck of cards, without replacement are dependent**. \n",
     "\n",
@@ -302,7 +302,7 @@
     "\n",
     "### Determining Dependence Based on Sample Data\n",
     "\n",
-    "<img src=\"images/observed_difference.svg\" width=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/observed_difference.svg\" width=\"600\" align=\"center\"/>\n",
     "\n",
     "If we observe a difference between the conditional probabilities that we calculate based on the sample, we say that these data suggest dependence. The next natural step would then be to actual conduct a hypothesis test. To see if what we observe these difference that we observed, could have just happened due to chance or natural random sampling. Or, if there's actually a real difference in the population. We can actually do a little bit of speculating based on the magnitude of the differences that we observe as well as the sample size. For example, the probability that guns protect citizens, given that somebody's white versus, given that they're black versus given that they're Hispanic, **if these conditional probabilities varied greatly, then there is stronger evidence that the difference is real**. On the other hand, **if the sample size is large, even small differences is in conditional probabilities might provide strong evidence of a real difference**. \n",
     "\n",
